flux/manifests/03-services/dashboard/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kubernetes-dashboard
  labels:
    name: kubernetes-dashboard
